--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,9 @@
+<!--
+  Title: index.html
+  Author: Zadkiel Rodriguez Alvarado
+  Date: 5/10/2024
+  Description: Index html
+-->
 <!doctype html>
 <html lang="en">
 <head>
@@ -7,9 +13,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body class="mat-typography">
+<body class="mat-typography mat-app-background">
   <app-root></app-root>
 </body>
 </html>
